--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <main class="container">
       <div class="menu">
-        <h2 class="menu-group-heading">Entrée</h2>
+        <h2 class="menu-group-heading">Break Fast</h2>
         <div class="menu-group">
           <div class="menu-item">
             <img
@@ -29,8 +29,8 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Bruschetta</span>
-                <span class="menu-item-price">$12.90</span>
+                <span class="menu-item-name">Coffe</span>
+                <span class="menu-item-price">50.00</span>
               </h3>
               <p class="menu-item-desc">
                 Nunc efficitur felis vel mi efficitur, sed molestie sem
@@ -47,8 +47,8 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Bruschetta</span>
-                <span class="menu-item-price">$12.90</span>
+                <span class="menu-item-name">Tea</span>
+                <span class="menu-item-price">40.00</span>
               </h3>
               <p class="menu-item-desc">
                 Nunc efficitur felis vel mi efficitur, sed molestie sem
@@ -65,8 +65,8 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Bruschetta</span>
-                <span class="menu-item-price">$12.90</span>
+                <span class="menu-item-name">Latte</span>
+                <span class="menu-item-price">35.00</span>
               </h3>
               <p class="menu-item-desc">
                 Nunc efficitur felis vel mi efficitur, sed molestie sem
@@ -88,8 +88,8 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Bruschetta</span>
-                <span class="menu-item-price">$12.90</span>
+                <span class="menu-item-name">Chicken</span>
+                <span class="menu-item-price">200.00</span>
               </h3>
               <p class="menu-item-desc">
                 Nunc efficitur felis vel mi efficitur, sed molestie sem
@@ -106,8 +106,8 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Bruschetta</span>
-                <span class="menu-item-price">$12.90</span>
+                <span class="menu-item-name">Mutton</span>
+                <span class="menu-item-price">300.00</span>
               </h3>
               <p class="menu-item-desc">
                 Nunc efficitur felis vel mi efficitur, sed molestie sem
@@ -124,8 +124,8 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Bruschetta</span>
-                <span class="menu-item-price">$12.90</span>
+                <span class="menu-item-name">Pork</span>
+                <span class="menu-item-price">400.00</span>
               </h3>
               <p class="menu-item-desc">
                 Nunc efficitur felis vel mi efficitur, sed molestie sem
